phase 4: create navbar.

--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -1,5 +1,5 @@
-{% extends "base.html.twig" %}
+{% extends "basefront.html.twig" %}
 {% block body %}
-    <h1> pages d'accueil </h1>
-    <a  href="{{ path('acceuil') }}">accueil</a>
+    <h1>Pages des voyages</h1>
+    <a href="{{ path('acceuil') }}">accueil</a>
 {% endblock %}
