--- a/templates/pages/acceuil.html.twig
+++ b/templates/pages/acceuil.html.twig
@@ -1,5 +1,5 @@
-{% extends "base.html.twig" %}
+{% extends "basefront.html.twig" %}
 {% block body %}
-    <h1> {{ hello }} </h1>
+    <h1>Page d'accueil</h1>
     <a href="{{ path('voyages') }}">voyages</a>
 {% endblock %}
