--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -20,6 +20,10 @@
                         <a class='nav-link' href='{{ ('voyages') }}'>Voyages</a>
                     </li>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
         </nav>
     </div>
