--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -1,5 +1,43 @@
 {% extends "basefront.html.twig" %}
 {% block body %}
-    <h1>Pages des voyages</h1>
-    <a href="{{ path('acceuil') }}">accueil</a>
+    <table class="table table-srtiped">
+        <thead>
+            <tr>
+                <th class="txte-left" scope="cole">ville</th>
+                <th class="txte-left" scope="cole">pays</th>
+                <th class="txte-end" scope="cole">note</th>
+                <th class="txte-center" scope="cole">date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for visite in visites %}
+                <tr>
+                    <td>
+                        <h5 class="text-primary">
+                            <a href="#">{{ visite.ville }}</a>
+                        </h5>
+                    </td>
+                    <td>
+                        {{ visite.pays }}
+                    </td>
+                    <td class="text-end">
+                        <strong>
+                            {% if visite.note<10 %}
+                                <div class="text-danger">
+                                    {{ visite.note }}/20
+                                </div>
+                            {% else %}
+                                <div class="text-success">
+                                    {{ visite.note }}/20
+                                </div>
+                            {% endif %}
+                        </strong>
+                    </td>
+                    <td class="text-center">
+                        {{ visite.datecreationstring }}
+                    </td>
+                </tr>                              
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
