--- a/templates/pages/voyages.html.twig
+++ b/templates/pages/voyages.html.twig
@@ -38,7 +38,7 @@
                 <tr>
                     <td>
                         <h5 class="text-primary">
-                            <a href="#">{{ visite.ville }}</a>
+                            <a href="{{ path('voyage.showone', {id:visite.id}) }}">{{ visite.ville }}</a>
                         </h5>
                     </td>
                     <td>
