--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,12 +10,12 @@
     </head>
     <body>
         <!--entête-->
-        {% block top %}{% endblock %}
+        {% block top %}Admin{% endblock %}
         <!--corps-->
         <div class="container">
             {% block body %}{% endblock %}
         </div>
-        <!--javascript--
+        <!--javascript-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
