--- a/templates/admin/admin.voyages.html.twig
+++ b/templates/admin/admin.voyages.html.twig
@@ -1,20 +1,23 @@
 {% extends "baseadmin.html.twig" %}
+
 {% block body %}
-    <table class="table table-srtiped">
+             
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>
-                    ville
+                    Ville
                 </th>
                 <th>
-                    pays
+                    Pays
                 </th>
                 <th>
-                    date
+                    Date
                 </th>
                 <th>
-                    action
+                    Actions
                 </th>
+            </tr>
         </thead>
         <tbody>
             {% for visite in visites %}
@@ -31,12 +34,12 @@
                         {{ visite.datecreationstring }}
                     </td>
                     <td>
-                        <a href="#" class="btn btn-secondary">Editer</a>
-                         <a href="{{ path('admin.voyage.suppr', {id:visite.id}) }}" class="btn btn-danger" onclick="return confirm('Etes-vous sûr de vouloir supprimer {{ visite.ville }} ?')">Supprimer</a>       
+                        <a href="{{ path('admin.voyage.edit', {id:visite.id}) }}" class="btn btn-secondary">Editer</a>
+                        <a href="{{ path('admin.voyage.suppr', {id:visite.id}) }}" class="btn btn-danger" onclick="return confirm('Etes-vous sûr de vouloir supprimer {{ visite.ville }} ?')">Supprimer</a>
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-           
+            
 {% endblock %}
